--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@neondatabase/serverless": "^0.9.5",
     "@next/font": "^14.2.13",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
