--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@clerk/nextjs": "^5.6.3",
     "@neondatabase/serverless": "^0.9.5",
     "@next/font": "^14.2.13",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -25,7 +27,9 @@
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
+    "ra-data-simple-rest": "^5.3.0",
     "react": "^18",
+    "react-admin": "^5.3.0",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
